package com.example.volunteerassistance.ui.theme

object State{
    var isHelp: Boolean = false
}